--- a/WebContent/css/mycss.css
+++ b/WebContent/css/mycss.css
@@ -607,6 +607,6 @@ div.viewTable {
 
 #daetguel{
 	border-top : 2px solid #AAA396;
-	background : #f7f1e3;
+	background : #C6B3B7;
 	padding : 20px;
 }
